cmake_minimum_required(VERSION 3.28)
project(DSA_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA_CPP
        Algorithom/GCD_Euclid.cpp
        Algorithom/inclusion.cpp
        Algorithom/seivePrimeNum.cpp
        Algorithom/SeivePrimFactor.cpp
        Array_solves/Array.cpp
        Array_solves/ArrayBinarySearch.cpp
        Array_solves/ArrayBubbleSort.cpp
        Array_solves/ArrayInsertion.cpp
        Array_solves/ArraylinearSearch.cpp
        Array_solves/ArrayMax_min.cpp
        Array_solves/ArraySelection.cpp
        Array_solves/CharecterArray.cpp
        Array_solves/CharecterArrayIO.cpp
        Array_solves/CharMaxWordLenth.cpp
        Array_solves/MatrixCordinate.cpp
        Array_solves/MatrixMultiplication.cpp
        Array_solves/MatrixSearch.cpp
        Array_solves/MatrixSearch2.cpp
        Array_solves/MaxTill_i.cpp
        Array_solves/Pelindrome.cpp
        Array_solves/pointerCalllbyRefrance.cpp
        Array_solves/SpiralMatrix.cpp
        Array_solves/Sum_Of_Sub_Array.cpp
        Array_solves/TransposeMetrix.cpp
        Array_solves/vector.cpp
        BitManupulation/2UniqueNumber.cpp
        BitManupulation/3sMultiple1unique.cpp
        BitManupulation/BitOperation.cpp
        BitManupulation/BitsChecking.cpp
        BitManupulation/Checking2sPower.cpp
        BitManupulation/HowMany1InBits.cpp
        BitManupulation/Subsets.cpp
        BitManupulation/uniqNumber.cpp
        Experiment/Rough.cpp
        Recursion/BoardGame.cpp
        Recursion/CountPtathInMaze.cpp
        Recursion/decreasinOrd.cpp
        Recursion/factorial.cpp
        Recursion/fibonacci.cpp
        Recursion/firstOcc.cpp
        Recursion/FNtoReplacePi.cpp
        Recursion/increasing.cpp
        Recursion/keyPadCombination.cpp
        Recursion/lastOcc.cpp
        Recursion/MoveSameTolast.cpp
        Recursion/Nth_Power.cpp
        Recursion/Permutation.cpp
        Recursion/Recursion.cpp
        Recursion/Removedubbles.cpp
        Recursion/ReverseStr.cpp
        Recursion/SortCheck.cpp
        Recursion/subseq.cpp
        Recursion/subseqAsscii.cpp
        Recursion/TheTowerOfHanoi.cpp
        string/MaxFrequencyStr.cpp
        string/string.cpp
        string/stringOperation.cpp)
